# ToDoList

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.json
.claude/: settings.local.json
.claude/skills/release/: SKILL.md
.github/workflows/: release-please.yml  release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/animations/: gsapConfig.ts  useDragAnimation.ts  useExpandAnimation.ts  useTodoAnimations.ts
src/assets/: CatIcon.tsx
src/components/: CategorySidebar.css  CategorySidebar.tsx  Header.css  Header.tsx  NotesEditor.css  NotesEditor.tsx  TodoForm.css  TodoForm.tsx  TodoItem.css  TodoItem.tsx  TodoList.css  TodoList.tsx
src/decorations/: FloatingClouds.css  FloatingClouds.tsx  GrassFooter.css  GrassFooter.tsx  SleepingCat.css  SleepingCat.tsx  Sparkle.tsx
src/hooks/: useCategories.ts  useTodos.ts
src/lib/: commands.ts
src/styles/: base.css  theme.css
src/types/: index.ts
